--- a/clickhouse-sink.yaml
+++ b/clickhouse-sink.yaml
@@ -1,157 +1,245 @@
-kind: clickhouse
+start:
+  args:
+    - --substreams-endpoint=https://bitcoin.substreams.pinax.network:443/v1/substreams
+    - substreams.yaml
+    - map_events
+    - --clickhouse-url=clickhouse://default:password@localhost:9000/default
+
 network: bitcoin
-start_block: 800000
-start_cursor: ""
 
-clickhouse:
-  dsn: "clickhouse://username:password@localhost:9000/bitcoin_analytics"
-  create_tables: true
-  bulk_size: 5000
-  skip_table_creation_errors: false
+# ClickHouse Database schema definitions
+schema:
+  # Cursor table for keeping track of progress
+  - name: substreams_cursors
+    engine: ReplacingMergeTree
+    primary_key: cursor_id
+    fields:
+      - name: cursor_id
+        type: String
+      - name: cursor
+        type: String
+      - name: head_block_number
+        type: UInt64
+      - name: head_block_timestamp
+        type: DateTime64(3)
+      - name: created_at
+        type: DateTime64(3)
+      - name: updated_at
+        type: DateTime64(3)
 
-substreams:
-  endpoint: bitcoin.substreams.pinax.network:443
-  package: bitcoin_analytics
-  module: db_out
-  production_mode: true
-  param:
-    - ""
+  # Block Analytics Table
+  - name: blocks
+    engine: ReplacingMergeTree
+    primary_key: block_number
+    fields:
+      - name: block_number
+        type: UInt64
+      - name: block_hash
+        type: String
+      - name: timestamp
+        type: DateTime64(3)
+      - name: size
+        type: UInt32
+      - name: weight
+        type: UInt32
+      - name: transaction_count
+        type: UInt32
+      - name: miner
+        type: String
+      - name: version
+        type: UInt32
+      - name: difficulty
+        type: String
+      - name: protocol_features
+        type: String
+        codec: "json"
 
-schema: |
-  CREATE TABLE IF NOT EXISTS bitcoin_blocks (
-      block_height UInt32,
-      block_hash String,
-      timestamp DateTime,
-      size UInt32,
-      weight UInt32,
-      tx_count UInt16,
-      difficulty Float64,
-      miner_name String,
-      block_time_seconds UInt16,
-      block_reward UInt64,
-      total_fees UInt64,
-      version UInt16,
-      nonce UInt32,
-      bits UInt32
-  ) ENGINE = MergeTree()
-  PARTITION BY toYYYYMM(timestamp)
-  ORDER BY (block_height);
-  
-  CREATE TABLE IF NOT EXISTS bitcoin_transactions (
-      tx_hash String,
-      block_height UInt32,
-      block_timestamp DateTime,
-      input_count UInt16,
-      output_count UInt16,
-      fee UInt64,
-      fee_rate Float32,
-      size UInt32,
-      weight UInt32,
-      is_coinbase UInt8,
-      version UInt8,
-      has_witness UInt8,
-      locktime UInt32,
-      input_value UInt64,
-      output_value UInt64,
-      tx_type String
-  ) ENGINE = MergeTree()
-  PARTITION BY toYYYYMM(block_timestamp)
-  ORDER BY (block_height, tx_hash);
-  
-  CREATE TABLE IF NOT EXISTS bitcoin_addresses (
-      address String,
-      tx_hash String,
-      block_height UInt32,
-      block_timestamp DateTime,
-      is_input UInt8,
-      value UInt64,
-      script_type String,
-      address_tag String,
-      address_category String
-  ) ENGINE = MergeTree()
-  PARTITION BY toYYYYMM(block_timestamp)
-  ORDER BY (address, block_height);
-  
-  CREATE TABLE IF NOT EXISTS bitcoin_network_daily (
-      date Date,
-      avg_block_time Float32,
-      total_tx_count UInt32,
-      total_tx_volume UInt64,
-      avg_block_size UInt32,
-      avg_tx_per_block Float32,
-      avg_fee_rate Float32,
-      mempool_tx_count UInt32,
-      segwit_tx_percent Float32,
-      taproot_tx_percent Float32,
-      avg_difficulty Float64,
-      active_addresses UInt32
-  ) ENGINE = MergeTree()
-  ORDER BY (date);
+  # Transaction Analytics Table
+  - name: transactions
+    engine: ReplacingMergeTree
+    primary_key: (block_number, transaction_hash)
+    fields:
+      - name: transaction_hash
+        type: String
+      - name: block_number
+        type: UInt64
+      - name: timestamp
+        type: DateTime64(3)
+      - name: size
+        type: UInt32
+      - name: weight
+        type: UInt32
+      - name: virtual_size
+        type: UInt32
+      - name: fee
+        type: UInt64
+      - name: fee_rate
+        type: Float64
+      - name: input_count
+        type: UInt32
+      - name: output_count
+        type: UInt32
+      - name: total_input_value
+        type: UInt64
+      - name: total_output_value
+        type: UInt64
+      - name: is_coinbase
+        type: UInt8
+      - name: transaction_type
+        type: UInt8
+      - name: input_addresses
+        type: Array(String)
+      - name: output_addresses
+        type: Array(String)
 
-mappings:
-  - module: BlockMetricsRecord
-    table: bitcoin_blocks
-    columns:
-      block_height: block.number
-      block_hash: block.hash
-      timestamp: "->datetime(block.timestamp)"
-      size: block.size
-      weight: block.weight
-      tx_count: block.tx_count
-      difficulty: block.difficulty
-      miner_name: block.miner
-      block_time_seconds: block.block_time
-      block_reward: block.block_reward
-      total_fees: block.total_fees
-      version: block.version
-      nonce: block.nonce
-      bits: block.bits
+  # Address Activity Table
+  - name: address_activities
+    engine: ReplacingMergeTree
+    primary_key: (address, block_number, transaction_hash)
+    fields:
+      - name: address
+        type: String
+      - name: block_number
+        type: UInt64
+      - name: timestamp
+        type: DateTime64(3)
+      - name: transaction_hash
+        type: String
+      - name: activity_type
+        type: UInt8
+      - name: value
+        type: UInt64
+      - name: balance
+        type: UInt64
+      - name: utxo_count
+        type: UInt32
 
-  - module: TransactionMetricsRecord
-    table: bitcoin_transactions
-    columns:
-      tx_hash: transaction.hash
-      block_height: transaction.block_number
-      block_timestamp: "->datetime(transaction.block_timestamp)"
-      input_count: transaction.input_count
-      output_count: transaction.output_count
-      fee: transaction.fee
-      fee_rate: transaction.fee_rate
-      size: transaction.size
-      weight: transaction.weight
-      is_coinbase: "->uint8(transaction.is_coinbase)"
-      version: transaction.version
-      has_witness: "->uint8(transaction.has_witness)"
-      locktime: transaction.locktime
-      input_value: transaction.input_value
-      output_value: transaction.output_value
-      tx_type: transaction.tx_type
+  # UTXO Table
+  - name: utxos
+    engine: ReplacingMergeTree
+    primary_key: (transaction_hash, output_index)
+    fields:
+      - name: transaction_hash
+        type: String
+      - name: output_index
+        type: UInt32
+      - name: block_number
+        type: UInt64
+      - name: timestamp
+        type: DateTime64(3)
+      - name: value
+        type: UInt64
+      - name: is_spent
+        type: UInt8
+      - name: spending_transaction_hash
+        type: String
+      - name: spending_block_number
+        type: UInt64
+      - name: address
+        type: String
+      - name: age
+        type: UInt64
 
-  - module: AddressActivityRecord
-    table: bitcoin_addresses
-    columns:
-      address: activity.address
-      tx_hash: activity.tx_hash
-      block_height: activity.block_number
-      block_timestamp: "->datetime(activity.block_timestamp)"
-      is_input: "->uint8(activity.is_input)"
-      value: activity.value
-      script_type: activity.script_type
-      address_tag: activity.address_tag
-      address_category: activity.address_category
+  # Mempool Stats Table
+  - name: mempool_stats
+    engine: ReplacingMergeTree
+    primary_key: timestamp
+    fields:
+      - name: timestamp
+        type: DateTime64(3)
+      - name: transaction_count
+        type: UInt32
+      - name: total_fee
+        type: UInt64
+      - name: median_fee_rate
+        type: Float64
+      - name: high_priority_fee_rate
+        type: Float64
+      - name: medium_priority_fee_rate
+        type: Float64
+      - name: low_priority_fee_rate
+        type: Float64
+      - name: total_mempool_size
+        type: UInt64
 
-  - module: NetworkDailyMetricsRecord
-    table: bitcoin_network_daily
-    columns:
-      date: "->date(metrics.date)"
-      avg_block_time: metrics.avg_block_time
-      total_tx_count: metrics.total_tx_count
-      total_tx_volume: metrics.total_tx_volume
-      avg_block_size: metrics.avg_block_size
-      avg_tx_per_block: metrics.avg_tx_per_block
-      avg_fee_rate: metrics.avg_fee_rate
-      mempool_tx_count: metrics.mempool_tx_count
-      segwit_tx_percent: metrics.segwit_tx_percent
-      taproot_tx_percent: metrics.taproot_tx_percent
-      avg_difficulty: metrics.avg_difficulty
-      active_addresses: metrics.active_addresses
+# Mapping from Substreams data to ClickHouse tables
+maps:
+  # Map block data
+  - module: map_events
+    type: bitcoin.analytics.v1.Events
+    transforms:
+      - transform: blocks
+        table: blocks
+        fields:
+          block_number: proto:blocks.block_number
+          block_hash: proto:blocks.block_hash
+          timestamp: expr:to_datetime(blocks.timestamp / 1000)
+          size: proto:blocks.size
+          weight: proto:blocks.weight
+          transaction_count: proto:blocks.transaction_count
+          miner: proto:blocks.miner
+          version: proto:blocks.version
+          difficulty: proto:blocks.difficulty
+          protocol_features: expr:to_json_string(blocks.protocol_features)
+
+      # Map transaction data
+      - transform: transactions
+        table: transactions
+        fields:
+          transaction_hash: proto:transactions.transaction_hash
+          block_number: proto:transactions.block_number
+          timestamp: expr:to_datetime(blocks[0].timestamp / 1000)
+          size: proto:transactions.size
+          weight: proto:transactions.weight
+          virtual_size: proto:transactions.virtual_size
+          fee: proto:transactions.fee
+          fee_rate: proto:transactions.fee_rate
+          input_count: proto:transactions.input_count
+          output_count: proto:transactions.output_count
+          total_input_value: proto:transactions.total_input_value
+          total_output_value: proto:transactions.total_output_value
+          is_coinbase: proto:transactions.is_coinbase
+          transaction_type: proto:transactions.type
+          input_addresses: proto:transactions.input_addresses
+          output_addresses: proto:transactions.output_addresses
+
+      # Map address activity data
+      - transform: address_activities
+        table: address_activities
+        fields:
+          address: proto:address_activities.address
+          block_number: proto:address_activities.block_number
+          timestamp: expr:to_datetime(blocks[0].timestamp / 1000)
+          transaction_hash: proto:address_activities.transaction_hash
+          activity_type: proto:address_activities.type
+          value: proto:address_activities.value
+          balance: proto:address_activities.balance
+          utxo_count: proto:address_activities.utxo_count
+
+      # Map UTXO data
+      - transform: utxos
+        table: utxos
+        fields:
+          transaction_hash: proto:utxos.transaction_hash
+          output_index: proto:utxos.output_index
+          block_number: proto:utxos.block_number
+          timestamp: expr:to_datetime(blocks[0].timestamp / 1000)
+          value: proto:utxos.value
+          is_spent: proto:utxos.is_spent
+          spending_transaction_hash: proto:utxos.spending_transaction_hash
+          spending_block_number: proto:utxos.spending_block_number
+          address: proto:utxos.address
+          age: proto:utxos.age
+
+      # Map mempool stats
+      - transform: mempool_stats
+        table: mempool_stats
+        fields:
+          timestamp: expr:to_datetime(mempool_stats.timestamp / 1000)
+          transaction_count: proto:mempool_stats.transaction_count
+          total_fee: proto:mempool_stats.total_fee
+          median_fee_rate: proto:mempool_stats.median_fee_rate
+          high_priority_fee_rate: proto:mempool_stats.fee_distribution.high_priority_fee_rate
+          medium_priority_fee_rate: proto:mempool_stats.fee_distribution.medium_priority_fee_rate
+          low_priority_fee_rate: proto:mempool_stats.fee_distribution.low_priority_fee_rate
+          total_mempool_size: proto:mempool_stats.total_mempool_size
