--- a/simple-substreams.yaml
+++ b/simple-substreams.yaml
@@ -1,9 +1,7 @@
 specVersion: v0.1.0
 package:
-  name: bitcoin_analytics
+  name: bitcoin_analytics_simple
   version: v0.1.0
-  url: https://github.com/PaulieB14/bitcoin-substreams-analytics
-  doc: Bitcoin blockchain analytics framework using Substreams
 
 imports:
   bitcoin: https://github.com/streamingfast/firehose-bitcoin/releases/download/v1.0.0-rc.1/bitcoin-v1.0.0.spkg
