--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,6 @@ substreams = "0.5.22"
 substreams-bitcoin = "1.0.0"
 hex = "0.4"
 chrono = "0.4"
-# Removed wasm-bindgen as it's causing compatibility issues
+
+[build-dependencies]
+substreams-protogen = "0.1.3"
